# LNKat

./: CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
samples/: calc.exe.lnk  reverse_shell.lnk
src/lnkat/: __init__.py  __main__.py  analyzer.py
src/lnkat/structures/: __init__.py  linktarget_idlist.py  shell_lnk_header.py  utils.py
