[project]
name = "lnkat"
version = "0.1.0"
description = "Windows Shortcut parser and generator based on Construct"
authors = [
    { name = "Gelven", email = "jo.pettersen@protonmail.com" }
]
dependencies = [
    "construct>=2.10.70",
    "arrow>=1.3.0",
    "uuid>=1.30",
]
readme = "README.md"
requires-python = ">= 3.8"
license = "MIT"

[project.scripts]
"lnkat" = "lnkat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lnkat"]
