[project]
name = "lnkat"
version = "0.1.0"
description = "Windows Shortcut parser and generator based on Construct"
authors = [
    { name = "Gelven", email = "jo.pettersen@protonmail.com" }
]
dependencies = [
    "construct>=2.10.70",
    "uuid>=1.30",
    "pytz>=2024.2",
]
readme = "README.md"
requires-python = ">= 3.8"
license = "MIT"

[project.scripts]
"lnkat" = "lnkat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lnkat"]
